[gd_scene load_steps=22 format=3 uid="uid://vapco6oyj505"]

[ext_resource type="Shader" uid="uid://djpayps1e263a" path="res://Shaders/Dither.gdshader" id="1_83ytx"]
[ext_resource type="Script" uid="uid://cy24f5d0s5mur" path="res://Main/main.gd" id="1_kf8jr"]
[ext_resource type="PackedScene" uid="uid://xssvva13wld7" path="res://Main/World/world.tscn" id="1_lxy7q"]
[ext_resource type="Texture2D" uid="uid://jfp2a6adotgf" path="res://Assets/panorama_image.png" id="1_ps1la"]
[ext_resource type="PackedScene" uid="uid://7ma44fyic3rn" path="res://Main/HUD/PauseLayer/pause_layer.tscn" id="3_amygn"]
[ext_resource type="Texture2D" uid="uid://su2bismrexv" path="res://Theme/LOGO.PNG" id="5_6aewd"]
[ext_resource type="Texture2D" uid="uid://cna3d4x2duduk" path="res://Assets/HUD/Buttons/play_button.png" id="6_hh5pf"]
[ext_resource type="Texture2D" uid="uid://1lowtyamw8r0" path="res://Theme/9patchbig.png" id="7_hh5pf"]
[ext_resource type="Texture2D" uid="uid://dijeohwwm8q0c" path="res://Assets/HUD/Buttons/tutorial_button.png" id="8_kmnsd"]
[ext_resource type="Texture2D" uid="uid://cjgatr13sh5x6" path="res://Assets/pickup_icon.png" id="10_h5g1y"]
[ext_resource type="Texture2D" uid="uid://dfnptclkshdal" path="res://Assets/Stones/stone2.png" id="11_qd626"]
[ext_resource type="Texture2D" uid="uid://eis6xoar45xu" path="res://Assets/HUD/Buttons/move_left.png" id="12_6ivxk"]
[ext_resource type="Texture2D" uid="uid://dk8ie2qaxnlbl" path="res://Assets/HUD/Buttons/move_left_pressed.png" id="13_6yo1i"]
[ext_resource type="Texture2D" uid="uid://hn2s4wspes4w" path="res://Assets/HUD/Buttons/move_right.png" id="14_lrfe7"]
[ext_resource type="Texture2D" uid="uid://cmtkmxv6pdhb" path="res://Assets/HUD/Buttons/move_right_pressed.png" id="15_r2ac1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_amygn"]
shader = ExtResource("1_83ytx")
shader_parameter/colors = 8.0
shader_parameter/dither = 0.25

[sub_resource type="Animation" id="Animation_6yo1i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contentControl/TutorialNode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contentControl/TutorialNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lrfe7"]
resource_name = "close_tutorial"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contentControl/TutorialNode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, -1.5), Vector2(0, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contentControl/TutorialNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6ivxk"]
resource_name = "show_tutorial"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contentControl/TutorialNode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 128), Vector2(0, -1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contentControl/TutorialNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r2ac1"]
_data = {
&"RESET": SubResource("Animation_6yo1i"),
&"close_tutorial": SubResource("Animation_lrfe7"),
&"show_tutorial": SubResource("Animation_6ivxk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6ivxk"]
radius = 48.0

[node name="Main" type="Node3D"]
script = ExtResource("1_kf8jr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(320, 320)
scale = Vector2(5, 5)
texture = ExtResource("1_ps1la")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer"]
material = SubResource("ShaderMaterial_amygn")
layout_mode = 2
mouse_filter = 2
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="MarginContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="World" parent="MarginContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_lxy7q")]

[node name="introLayer" type="CanvasLayer" parent="."]

[node name="tutorialAnimationPlayer" type="AnimationPlayer" parent="introLayer"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_r2ac1")
}

[node name="contentControl" type="Control" parent="introLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="introLayer/contentControl"]
position = Vector2(501, 215)
scale = Vector2(3, 3)
texture = ExtResource("5_6aewd")

[node name="playButton" type="TextureButton" parent="introLayer/contentControl"]
layout_mode = 0
offset_left = 175.0
offset_top = 274.0
offset_right = 215.0
offset_bottom = 314.0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_hh5pf")

[node name="tutorialButton" type="TextureButton" parent="introLayer/contentControl"]
layout_mode = 0
offset_left = 300.0
offset_top = 274.0
offset_right = 340.0
offset_bottom = 314.0
scale = Vector2(2, 2)
texture_normal = ExtResource("8_kmnsd")

[node name="TutorialNode" type="MarginContainer" parent="introLayer/contentControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Control" type="MarginContainer" parent="introLayer/contentControl/TutorialNode"]
layout_mode = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="introLayer/contentControl/TutorialNode/Control"]
layout_mode = 2
texture = ExtResource("7_hh5pf")
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="MarginContainer" type="MarginContainer" parent="introLayer/contentControl/TutorialNode/Control"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "
[pulse] TUTORIAL [/pulse]

[wave] Nocturnal pulse [/wave]es un videojuego \"Runner\" cuya mecanica central es usar el ritmo de la musica y tus reflejos para esquivar los obstaculos"
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("10_h5g1y")

[node name="TextureRect2" type="TextureRect" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("11_qd626")
expand_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="introLayer/contentControl/TutorialNode/Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Come las frutas
esquiva los obstaculos"
horizontal_alignment = 1

[node name="PauseLayer" parent="." instance=ExtResource("3_amygn")]
layer = 2

[node name="ControlLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="MarginContainer2" type="MarginContainer" parent="ControlLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Control" type="Control" parent="ControlLayer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="TouchScreenButton" type="TouchScreenButton" parent="ControlLayer/MarginContainer2/Control"]
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(-48, -48)
scale = Vector2(3, 3)
texture_normal = ExtResource("12_6ivxk")
texture_pressed = ExtResource("13_6yo1i")
shape = SubResource("CircleShape2D_6ivxk")
action = "izquierda"
visibility_mode = 1

[node name="Control2" type="Control" parent="ControlLayer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="TouchScreenButton" type="TouchScreenButton" parent="ControlLayer/MarginContainer2/Control2"]
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(-48, -48)
scale = Vector2(3, 3)
texture_normal = ExtResource("14_lrfe7")
texture_pressed = ExtResource("15_r2ac1")
shape = SubResource("CircleShape2D_6ivxk")
action = "derecha"
visibility_mode = 1

[connection signal="pressed" from="introLayer/contentControl/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="introLayer/contentControl/tutorialButton" to="." method="_on_tutorial_button_pressed"]
